--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "eslint-plugin-react": "^7.37.5",
     "globals": "^16.0.0",
     "jsdom": "^26.0.0",
+    "prettier": "^3.5.3",
     "typescript-eslint": "^8.29.1",
     "vite": "^6.2.6",
     "vitest": "^3.1.1"
