--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "@eslint/js": "^9.24.0",
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/user-event": "^14.6.1",
+    "@types/react": "^19.1.2",
+    "@types/react-dom": "^19.1.2",
     "@vitest/ui": "^3.1.1",
     "eslint": "^9.24.0",
     "eslint-config-prettier": "^10.1.2",
@@ -31,6 +33,8 @@
     "vitest": "^3.1.1"
   },
   "dependencies": {
-    "pnpm": "^10.8.0"
+    "pnpm": "^10.8.0",
+    "react": "^19.1.0",
+    "react-dom": "^19.1.0"
   }
 }
