feat : git page 설정

--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "front-5th-chapter2-1",
+  "homepage": "https://singyukang.github.io/front_5th_chapter2-1/",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -12,7 +13,9 @@
     "test": "vitest",
     "test:basic": "vitest basic.test.js",
     "test:advanced": "vitest advanced.test.js",
-    "test:ui": "vitest --ui"
+    "test:ui": "vitest --ui",
+    "prepare": "husky && husky install",
+    "deploy": "pnpm run build && gh-pages -d dist"
   },
   "devDependencies": {
     "@eslint/js": "^9.24.0",
@@ -33,6 +36,7 @@
     "vitest": "^3.1.1"
   },
   "dependencies": {
+    "gh-pages": "^6.3.0",
     "pnpm": "^10.8.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0"
